Change the control table to have a key-value approach.